The email to mailboxes who are approaching or over quota can now be customized on the Disk Quota Monitoring page.
Added the Convert Alias Server page to change an existing alias virtual server into a sub-server.
Historic statistics graphs can now be plotted on a log scale, and both axis are used if multiple values are plotted.
Extra administrators can now be limited to a subset of the parent servers domains, either from the Edit Extra Administator page or using the command-line API.
Moved the settings for which Webmin modules are available to virtual server owners from the Module Config page to a new section in server templates, so that it can be adjusted on a per-template basis.
Email to domain owners on virtual server creation can now include variables like $PLAN_NAME, $RESELLER_NAME and $PARENT_DOM.
When a virtual server is disabled for exceeding its bandwidth limits, all sub-servers will be too. Similarly, they will be re-enabled if the server falls below its limit.
Added support for migrating cPanel addon domains properly.
Added a template option to disable addition of also-notify and allow-transfer blocks to new DNS domains.
LXadmin backups can now be migrated into Virtualmin servers, preserving web content, databases, mailboxes and mail aliases.
Changed the Squirrelmail script installer to use the new set_user_data plugin via Ian Goldstein, which allows login by email address and sets the from address correctly by default.
Updated all code that reads or writes to files in a virtual server's home directory to operate with the user's permissions, which prevents use of malicious links to access root-owned files.
---- Changes since 3.70 ----
Updated the Zpush script installer to 1.2.2, Bugzilla to 3.2.4, Wordpress to 2.8.1, Wordpress MU to 2.8.1, Typo3 to 4.2.8, Trac to 0.11.5rc2, and bbPress to 1.0.1.
Added an option to the backup form for selecting virtual servers by plan. Also added the --plan flag to the backup-domains command.