@@ -1133,3 +1133,4 @@ Updated all code that reads or writes to files in a virtual server's home direct
 ---- Changes since 3.70 ----
 Updated the Zpush script installer to 1.2.2, Bugzilla to 3.2.4, Wordpress to 2.8.1, Wordpress MU to 2.8.1, Typo3 to 4.2.8, Trac to 0.11.5rc2, and bbPress to 1.0.1.
 Added an option to the backup form for selecting virtual servers by plan. Also added the --plan flag to the backup-domains command.
+Corrected a mis-feature that prevented alias virtual servers with no home directory from being backed up in the new format.
